eks-fargate/react/react-sev.yml
apiVersion: v1 
kind: Service
metadata: 
  name: react-service
  labels: 
    name: react-app
    app: react-app

spec: 
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
  selector: 
    name: react-app
    app: react-app
